# minio-console

./: README.md  pyproject.toml  setup.cfg  setup.py
src/minio_console/: __init__.py  buckets.py  client.py  policies.py  users.py
tests/: test_client.py
