[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minio_console"
version = "0.1.1"
authors = [
  { name="Xiwen Cheng", email="x@cinaq.com" },
]
description = "A simple Python library to interact with minio console API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cinaq/minio-console"